k8s/apps/headlamp/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-ingress
  namespace: headlamp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: keycloak-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - headlamp.int.jigga.xyz
      secretName: headlamp-tls
  rules:
    - host: headlamp.int.jigga.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
